# udpfwd

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  udpfwd.go
