load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["udpfwd.go"],
    importpath = "github.com/DataDog/udpfwd",
    visibility = ["//visibility:private"],
    deps = ["@com_github_datadog_datadog_go//statsd:go_default_library"],
)

go_binary(
    name = "udpfwd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    goos = "linux",
    goarch = "amd64",
)
