load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")


go_library(
    name = "go_default_library",
    srcs = ["udpfwd.go"],
    importpath = "github.com/DataDog/udpfwd",
    visibility = ["//visibility:private"],
    deps = ["@com_github_datadog_datadog_go//statsd:go_default_library"],
)

go_binary(
    name = "udpfwd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@io_docker_debian_stable_slim//image",
    cmd = [],
    directory = "/usr/bin",
    entrypoint = ["/bin/bash"],
    files = [
        ":udpfwd",
    ],
    legacy_run_behavior = False,
    mode = "0777",
    visibility = ["//visibility:public"],
)
